# local-fmt

./: .gitignore  .typos.toml  Cargo.toml  README.md
examples_lib/: Cargo.toml
examples_lib/locales/: app.toml
examples_lib/src/: lib.rs  main.rs
local-fmt/: Cargo.toml
local-fmt-derive/: Cargo.toml  test-lang.toml
local-fmt-derive/src/: args.rs  internal.rs  lib.rs
local-fmt-derive/src/messages/: arg.rs  mod.rs
local-fmt-derive/src/parse/: mod.rs
local-fmt-derive/test-lang/: EN.toml
local-fmt-internal/: Cargo.toml
local-fmt-macros/: Cargo.toml
local-fmt-macros-internal/: Cargo.toml
local-fmt-macros-internal/src/: lib.rs
local-fmt-macros-internal/src/def_local_fmt/: arg.rs  mod.rs
local-fmt-macros-internal/src/def_local_fmt/internal/: arg.rs  mod.rs
local-fmt-macros-internal/src/def_local_fmt/internal/file/: json.rs  mod.rs  toml.rs  yaml.rs
local-fmt-macros-internal/src/parse/: alloc.rs  mod.rs  static_ref.rs
local-fmt-macros-internal/src/util_macro/: arg.rs  mod.rs
local-fmt-macros-internal/src/utils/: hierarchy.rs
local-fmt-macros/doctest/: lang.json
local-fmt-macros/src/: args.rs  internal_def_local_fmt.rs  lib.rs
local-fmt-macros/src/def_local_fmt/: arg.rs  mod.rs
local-fmt-macros/src/def_local_fmt/internal/: arg.rs  mod.rs
local-fmt-macros/src/def_local_fmt/internal/file/: mod.rs  toml.rs
local-fmt-macros/src/messages/: mod.rs
local-fmt-macros/src/parse/: mod.rs
local-fmt-macros/src/util_macro/: arg.rs  mod.rs
local-fmt/doctest/langs/: EN.toml  JA.toml
local-fmt/examples/: basic.rs  en.toml  ja.toml  sample.rs
local-fmt/examples/lang/: EN.toml  JA.toml
local-fmt/src/: derive.rs  dev_utils.rs  lib.rs  macros.rs  message.rs  serde.rs  utils.rs
local-fmt/src/message/: alloc.rs  mod.rs  refer.rs
local-fmt/tests/: derive.rs  from_str.rs  gen_alloc_message.rs  gen_const_message.rs  gen_message.rs  gen_static_message.rs  lang.toml  load_file_util.rs  sample.toml  serde.rs
local-fmt/tests/ui/gen_static_message/: access_to_not_const.rs  access_to_not_const.stderr  empty_placeholder.rs  empty_placeholder.stderr  missmatch_placeholder.rs  missmatch_placeholder.stderr  not_found.rs  not_found.stderr  not_found_ident.rs  not_found_ident.stderr
local-fmt/tests/ui/static_message_new_panic/: invalid_argument.rs  invalid_argument.stderr  not_found.rs  not_found.stderr
local_fmt/: Cargo.toml
local_fmt/examples/: sample.rs
local_fmt/src/: enum_map.rs  lib.rs  message.rs
local_fmt/tests/: enum_iter.rs  enum_map.rs  gen_const_message.rs  local_fmt.rs
local_fmt_derive/: Cargo.toml
local_fmt_derive/src/: args.rs  as_locale.rs  gen.rs
local_fmt_derive/tests/: as_local.rs
local_fmt_macros/: Cargo.toml
local_fmt_macros/src/: args.rs  convert_str.rs  enum_iter.rs  enumable.rs  gen.rs  lib.rs
local_fmt_macros/tests/: as_local.rs  convert_str.rs  convert_str_key.rs
