[workspace]
resolver = "2"
members = ["local-fmt", "local-fmt-derive"]

[workspace.package]
version = "0.3.0"
edition = "2021"
rust-version = "1.81"
description = "This crate provides localizable format strings."
authors = ["Moriyoshi Kasuga <moriyoshi.kasuga1218@gmail.com>"]
repository = "https://github.com/moriyoshi-kasuga/local-fmt"
license = "MIT"
readme = "README.md"
categories = ["localization"]
keywords = ["localization", "translation"]

[workspace.dependencies]

[workspace.lints.rust]
nonstandard_style = { level = "warn", priority = -1 }
unreachable_pub = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
print_stdout = "deny"
print_stderr = "deny"
