[workspace]
resolver = "2"
members = ["local-fmt", "local-fmt-macros", "local-fmt-macros-internal"]

[workspace.package]
version = "0.5.1"
edition = "2021"
rust-version = "1.81"
description = "This crate provides localizable format strings."
authors = ["Moriyoshi Kasuga <moriyoshi.kasuga1218@gmail.com>"]
repository = "https://github.com/moriyoshi-kasuga/local-fmt"
license = "MIT"
readme = "README.md"
categories = ["localization"]
keywords = ["localization", "translation"]

[workspace.dependencies]
syn = { version = "2.0", default-features = false }
thiserror = "2.0"

[workspace.lints.rust]
nonstandard_style = { level = "warn", priority = -1 }
unreachable_pub = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"

[patch.crates-io]
local-fmt = { path = "local-fmt" }
