[package]
name = "local-fmt-derive"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[lib]
proc-macro = true

[dependencies]
thiserror.workspace = true

syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1.0"
quote = "1.0"
toml = "0.8"

[dev-dependencies]
local-fmt = { path = "../local-fmt", features = ["derive"] }
enum-table = "0.2"

[lints]
workspace = true
