[package]
name = "local-fmt-internal"
version.workspace = true
edition.workspace = true
description = "local-fmt internal crate"
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true

[lints]
workspace = true
