[package]
name = "local-fmt-macros-internal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
thiserror.workspace = true
syn = { workspace = true, default-features = true }
proc-macro2 = "1.0"
quote = "1.0"

toml = "0.8"
serde_json = "1.0"

[lints]
workspace = true
