[package]
name = "local-fmt-macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[lib]
proc-macro = true

[features]
default = []
toml = ["local-fmt-macros-internal/toml"]
json = ["local-fmt-macros-internal/json"]

[dependencies]
local-fmt-macros-internal = { version = "^0", path = "../local-fmt-macros-internal" }

syn = { workspace = true, default-features = false, features = [
    "parsing",
    "proc-macro",
] }

[dev-dependencies]
local-fmt = { path = "../local-fmt", features = ["macros"] }
enum-table = "0.2"

[lints]
workspace = true
