[package]
name = "local-fmt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "This crate provides localizable format strings."
authors.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
default = []
derive = ["dep:local-fmt-derive"]
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0", optional = true }

thiserror = "2.0"
enum-table = "0.2"
local-fmt-derive = { version = "^0", path = "../local-fmt-derive", optional = true }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[lib]
name = "local_fmt"

[lints]
workspace = true
