[package]
name = "local-fmt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "This crate provides localizable format strings."
authors.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
default = []
macros = ["dep:local-fmt-macros"]
macros-toml = ["macros", "local-fmt-macros/toml"]
macros-json = ["macros", "local-fmt-macros/json"]
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0", optional = true }

thiserror.workspace = true
enum-table = "0.2"
local-fmt-macros = { version = "^0", path = "../local-fmt-macros", optional = true }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[lib]
name = "local_fmt"

[lints]
workspace = true

[[example]]
name = "basic"
path = "examples/basic.rs"
required-features = ["macros", "macros-toml"]
