[package]
name = "local-fmt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "This crate provides localizable format strings."
authors.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
local-fmt-derive = { version = "^0", path = "../local_fmt_derive", optional = true }

[features]
default = []
derive = ["local-fmt-derive"]
selected = ["local-fmt-derive?/selected"]
global = ["local-fmt-derive?/global"]

[lib]
name = "local_fmt"

[lints]
workspace = true
