[package]
name = "local-fmt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "This crate provides localizable format strings."
authors.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
local-fmt-macros = { version = "^0", path = "../local_fmt_macros", optional = true }
serde = "1.0"

[features]
default = []
macros = ["local-fmt-macros"]

[lib]
name = "local_fmt"

[lints]
workspace = true
