[package]
name = "local-fmt-derive"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "derive macro implementation for local-fmt crate"
authors.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"

toml = "0.8"

[lib]
proc-macro = true

[features]
default = []
selected = []
global = []

[lints]
workspace = true
