[package]
name = "local-fmt-macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "macro implementation for local-fmt crate"
authors.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

toml = "0.8"
convert_case = "0.7"

[lib]
proc-macro = true

[features]
default = []
selected = []
global = []

[lints]
workspace = true
